[metadata]
name = USBPcapOdinDumper
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/USBPcapOdinDumper
description = A tool to assist ODIN3 protocol reverse engineering.
long_description = file: README.md
keywords = odin3, samsung, heimdall, pcap, usbmon, usbpcap
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

install_requires =
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git#egg=plumbum
	RichConsole @ git+https://github.com/KOLANICH/RichConsole.git#egg=RichConsole
	Pipeline @ git+https://github.com/KOLANICH/Pipeline.py.git#egg=Pipeline
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git#egg=kaitaistruct


[options]
python_requires = >=3.4
zip_safe = True
packages = USBPcapOdinDumper, USBPcapOdinDumper.kaitai
setup_requires = setuptools_scm;
test_suite = tests.tests.Tests

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
